# reptclip

./: LICENSE  README.md  pyproject.toml  reptclip-config.toml
docs/: advanced-usage.md
docs/dev/: README.md
docs/me/: prompt.md  publishing.md
src/cheapchatcontext/: __init__.py  cli.py  clipboard.py  file_reader.py  git_files.py
src/reptclip/: __init__.py  cli.py  config.py  filters.py  git_files.py  markdown_builder.py
tests/: test_cli.py  test_config.py  test_file_reader.py  test_filters.py  test_git_files.py  test_markdown_builder.py
