[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reptclip"
version = "0.1.0"
description = "Generate Markdown context of a git repository and copy it straight to your clipboard, ready to paste into an LLM chat."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [{ name = "EffessDev", email = "effessdev@gmail.com" }]
keywords = ["cli", "llm", "context", "git", "markdown", "clipboard"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = ["pyperclip>=1.8", "tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ccc = "reptclip.cli:main"

[project.urls]
Homepage = "https://github.com/effessdev/reptclip"

[tool.hatch.build.targets.wheel]
packages = ["src/reptclip"]
